argocd/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  # This is required to all the gateway (in the ingress namespace) to handle requests from this namesapce.
  labels:
    shared-gateway-access: true
