argocd/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: https
      kind: Gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
