argocd/curryware-argocd-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingresss.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
  name: curryware-argocd-ingress-controller
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: ubuntu-microk8s.curryware.org
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ubuntu-microk8s.curryware.org
    secretName: argocd-secret-tls
